Reads the "brand name" property and then caches it so it can use it on documents with no title. Bug 133193 r=dcone sr=attinasi a=dbaron